vlib/v/checker/tests/vweb_routing_checks.out
vlib/v/checker/tests/vweb_routing_checks.vv:21:1: error: mismatched parameters count between vweb method `App.bar` (1) and route attribute ['/bar'] (0)
   19 | // segfault because path taks 0 vars and fcn takes 1 arg
   20 | ['/bar']
   21 | pub fn (mut app App) bar(a string) vweb.Result {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   22 |     app.html('works')
   23 |     return vweb.Result{}
vlib/v/checker/tests/vweb_routing_checks.vv:28:1: error: mismatched parameters count between vweb method `App.cow` (0) and route attribute ['/cow/:low'] (1)
   26 | // no segfault, but it shouldnt compile
   27 | ['/cow/:low']
   28 | pub fn (mut app App) cow() vweb.Result {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   29 |     app.html('works')
   30 |     return vweb.Result{}
